--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonfile": "^4.0.0",
     "socket.io": "^2.1.1"
   }
 }
